# Genomics-GPU

./: NOTICE  README.md
CDP/CLUSTER/: LICENSE  README.md  testData.fasta
CDP/CLUSTER/cluster/: Makefile  cluster  generateIndex  test.cu  zeroTest.cu
CDP/CLUSTER/oneAPI/: main.cpp
CDP/GASAL2/: Makefile  README.md
CDP/GASAL2/include/: gasal.h
CDP/GASAL2/objo/: args_parser.cppo  ctors.cppo  host_batch.cppo  interfaces.cppo  res.cppo
CDP/GASAL2/src/: gasal_align.cu
CDP/GASAL2/test_prog/: Makefile  query_batch.fasta  report1.qdrep  report1.sqlite
CDP/NW/: Makefile  common.h  kernel0.cu  kernel1.cu  kernel2.cu  kernel3.cu  main.cu  plot_execution_times.py  timer.h
CDP/NvB/: README.md
CDP/NvB/nvBowtie/: CMakeLists.txt
CDP/NvB/nvBowtie/bowtie2/cuda/: mapping.cu
CDP/Pair-HMM/: Makefile
CDP/Pair-HMM/dataset/: 128_192.txt  32_224.txt  64_128.txt  64_64.txt  96_192.txt
CDP/PairHMM/: improved_warp_based.cu
CDP/PairHMM/dataset/: 128_128.txt  128_160.txt  128_224.txt  128_256.txt  32_128.txt  32_160.txt  32_256.txt  32_64.txt  32_96.txt  64_160.txt  64_192.txt  64_224.txt  64_256.txt  64_96.txt  96_128.txt  96_160.txt  96_224.txt  96_256.txt  96_96.txt
CDP/STAR/: build.sh  center-star.cc  cmsa2  cuda-nw.cu  fastautil.cc  global.cc  global.h  load-matrix.h  main.cu  nw.cc  nw.h  sort.cc  util.h
CDP/STAR/mic/: center-star.h  fastautil.cc  global.cc  main.cc  nw.cc  sp.cc  test.cpp
CDP/SW/: Makefile  main.cu  unixtimer.h
CDP/cluster/: Makefile  README.md  func.cu  func.h  result.fasta
CDP/cluster/oneAPI/: README.md  func.h
Non-CDP/CLUSTER/: Makefile  README.md  func.cu  func.h  main.cu  result.fasta
Non-CDP/CLUSTER/cluster/: readme.md
Non-CDP/CLUSTER/oneAPI/: Makefile  func.cpp
Non-CDP/GASAL2/: Makefile  NOTICE
Non-CDP/NW/: Makefile  README.md  common.h  kernel0.cu  kernel1.cu  kernel2.cu  kernel3.cu  main.cu
Non-CDP/PairHMM/: README.md
Non-CDP/STAR/: README.md
(+78 files in other folders)
